[package]
name = "wasm-playground"
version = "0.1.0"
description = "A sample project playing around with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/tlugger/wasm-playground"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
]
